make sure all primary content is inside content-wrap and set max-width 910px

--- a/scss/all.scss
+++ b/scss/all.scss
@@ -144,6 +144,7 @@ header {
 .content-wrap {
 	padding-top: 80px;
 	margin: 0 8px;
+	max-width: 910px;
 }
 
 /* Tablets and up ----------- */
